# gamecmd-gui

./: LICENSE  README.md  install.sh  pyproject.toml  run.sh
data/: gamecmd-gui.desktop
gamecmd_gui/: __main__.py  app.py  command_builder.py  gtk_util.py  main.py  models.py  options_catalog.py  steam.py  vdf.py
gamecmd_gui/widgets/: game_editor_page.py  games_list_page.py  import_steam_dialog.py
