[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamecmd-gui"
version = "0.1.0"
description = "GTK4/libadwaita GUI for gamecmd -- build Steam launch-option profiles from checklists (Proton, DXVK, DLSS, FSR, MangoHud, engine flags) with a live command preview."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
dependencies = [
    "PyGObject>=3.42",
    "ruamel.yaml>=0.17",
]

[project.scripts]
gamecmd-gui = "gamecmd_gui.main:run"

[tool.setuptools.packages.find]
include = ["gamecmd_gui*"]
